src/css/whether-widget.css
.whether-widget {
  margin-top: 25px;
  display: flex;
}

.whether-widget__place-name {
  font-size: 14px;
  color: #858585;
}

.whether-widget__whether-item {
  margin-right: 18px;
}

.whether-widget__temperature {
  display: inline-block;
  font-weight: bold;
  font-size: 36px;
  color: #333333;
  letter-spacing: 0;
  text-align: left;
}

.whether-widget__icon {
  display: inline-block;
}

@media screen and (max-width: 576px){
  .whether-widget {
    margin-top: 15px;
  }

  .whether-widget__whether-item {
    margin-right: 19px;
  }

  .whether-widget__place-name {
    font-size: 12px;
  }

  .whether-widget__temperature {
    font-size: 24px;
  }
}

